--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <title>Taxi: The Programming Language</title>
 </head>
 <body bgcolor="white" alink="red" vlink="blue" link="blue">
+
+<a href="http://github.com/BigZaphod/Taxi"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+
 <small><font face="Arial"><b>Other Languages:</b>
-<a href="/cow/">COW</a> | <a href="/whirl/">Whirl</a> | <a href="/3code/">3code</a> | <b>Taxi</b> </font></small>
+<a href="/COW/">COW</a> | <a href="/Whirl/">Whirl</a> | <a href="/3code/">3code</a> | <b>Taxi</b> </font></small>
 
 <div>
 <img src="logo.png" alt="Taxi" />
@@ -391,14 +394,6 @@ program manages to make a substantial profit.</i>  Thanks Nick!
 
 <h3>History</h3>
 Conceived on June 21, 2005 and first released on June 27th, 2005.
-
-<br><br><br>
-<div align="center">
-<table border="1" cellpadding="4" cellspacing="0" width="255" align="center"><tr><td style="background:#fed;color:#000;font-family:Tahoma,Helvetica,Arial, sans-serif;text-align:center;font-size:11px"><strong><a style="color:#420;text-decoration:none" href="http://B.webring.com/wrman?ring=esolang&amp;addsite" target="_top">The Esoteric Programming Languages Ring</a></strong><br /><a style="color:#840" href="http://B.webring.com/go?ring=esolang&amp;id=52&amp;prev" target="_top">&lt;&lt; Prev</a>&nbsp;<a style="color:#840" href="http://B.webring.com/hub?ring=esolang&amp;id=52&amp;hub" target="_top">Ring Hub</a>&nbsp;<a style="color:#840" href="http://B.webring.com/go?ring=esolang&amp;id=52&amp;next" target="_top">Next &gt;&gt;</a></td></tr></table>
-</div>
-
-<br>
-<small><a href="http://www.bigzaphod.org">check out my other stuff</a></small>
 
 </body>
 </html>
