--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ itself (no passengers left waiting anywhere except the stack) and the
 program manages to make a substantial profit.</i>  Thanks Nick!
 <br><br>
 Bram Pulles <a href="https://github.com/BigZaphod/Taxi/blob/master/examples/tictactoe.txt">wrote an astounding Tic-Tac-Toe implementation</a>!
-Two players can take turns and the game will detect the winner. It even prevents the player from making impossible moves! Bran also discovered 
+Two players can take turns and the game will detect the winner. It even prevents the player from making impossible moves! Bram also discovered 
 and patched a bug in the interpreter that's been lurking for nearly 15(!) years. Thanks a lot, Bram!
 
 <h3>History</h3>
