--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ It also uses both a conditional and unconditional jump as well as comments.
 <h3>Downloads</h3>
 The <a href="https://github.com/BigZaphod/Taxi/blob/master/source/taxi.cpp">C++ source</a> for the interpreter is available. <small>(it is very scary)</small>
 <br><br>
-<a href="https://github.com/BigZaphod/Taxi/blob/master/examples/hello_world.txt">Hello, World</a> and <a href="fib.txt">Fibonacci</a> sample code.
+<a href="https://github.com/BigZaphod/Taxi/blob/master/examples/hello_world.txt">Hello, World</a> and <a href="https://github.com/BigZaphod/Taxi/blob/master/examples/fib.txt">Fibonacci</a> sample code.
 <br><br>
 <a href="https://github.com/BigZaphod/Taxi/blob/master/examples/echo.txt">Echo</a> will read a string from stdin, and then echo it back to stdout.
 <br><br>
