--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 </head>
 <body bgcolor="white" alink="red" vlink="blue" link="blue">
 
-<a href="http://github.com/BigZaphod/Taxi"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
-
 <small><font face="Arial"><b>Other Languages:</b>
 <a href="/COW/">COW</a> | <a href="/Whirl/">Whirl</a> | <a href="/3code/">3code</a> | <b>Taxi</b> </font></small>
+<a href="http://github.com/BigZaphod/Taxi" style="position: absolute; top: 0; right: 0; border: 0; text-align: right;">GitHub</a>
 
 <div>
 <img src="logo.png" alt="Taxi" />
